Maverick Synergy 3.0.0-RC5 - TBC

Bug Fixes
    o FileLoggingContext fails with NPE when log path is relative.   
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC4 - Mar 17, 2021

Features
    o Added shutdownAndExit method to SshEngine designed for calling before application shutdown (it is the applications responsibility to exit, this is just for clean up).
    o Added context option to disable preference of using keyboard-interactive authentication over password.
    
Bug Fixes
    o Fixed race condition where authentication client can receive failure message from the none authenticator.
    o OpenSSH RSA certificate incorrectly attempted to be decoded as ECDSA.
    o NPE when DefaultLoggingContext.shutdown is called and no file watcher has been initialized.
    o Removed synchronization from EventServiceImplementation to prevent delays in event handlers from slowing down other threads.

-----------------

Maverick Synergy 3.0.0-RC3 - Feb 2, 2021

Bug Fixes
    o Ensure console logger flushes out after a log statement has been written to console.
    o Forwarding channel receiving SSH_MSG_CHANNEL_CLOSE before SSH_MSG_CHANNEL_EOF could hang due to reliance on remote EOF state being received prior to accepting channel close. 
    o Added default timeout support to CachingDataWindow during put operation.
    
-----------------

Maverick Synergy 3.0.0-RC2 - Jan 25, 2021

Bug Fixes
    o Fixed implicit narrowing of long to int from code scan warning. 
    o SshServer required a method to be able to set the default Security Level.
    o Made ByteArrayReader more resilient to length errors when processing messages.
    
-----------------

Maverick Synergy 3.0.0-RC1 - Dec 27, 2020

Features
    o Major refactor to support more shared code with the Maverick Legacy APIs.
    o Removed all dependencies from core maverick-synergy-client and maverick-synergy-server modules to enable clearer choice on third-party dependencies.